data/derived/sp14/progs/unify/prog4765.ml.out
Characters 305-307:
  | Thresh (e1,e2,e3,e4) -> e1^"<" ^e2^ "?" ^ e3 ^":" ^ e4;;
                            ^^
Error: This expression has type expr but an expression was expected of type
         string
